# photo_conversion

./: .gitignore  LICENSE.md  README.md  pyproject.toml
photo_converter/: __main__.py  cli.py  del_nef_and_covert_heic.py  rename_and_number_images.py
test/: test_del_nef_and_covert_heic.py
